--- a/css/main.css
+++ b/css/main.css
@@ -5,32 +5,38 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-  font-family: 'Open Sans', sans-serif;
-  margin: 1.5rem;
+  font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
   background-color: #ccc;
+  line-height: 1.5;
+}
+
+body {
+  width: 100%;
+  margin: 0;
+  justify-content: center;
 }
 
 h2 {
   text-align: center;
+  margin-bottom: 0;
 }
 
 img {
   display: block;
   width: 5rem;
-  padding: 1rem;
-
+  margin: 0 1.5rem 1.5rem;
 }
 
 li {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 p {
   width: 24rem;
-  padding: .6rem;
+  padding-right: 2rem;
+  margin-right: 1.5rem;
 }
 
 h3, h4 {
@@ -41,8 +47,8 @@ a {
   text-decoration: none;
   color: #fff;
   background-color: #444;
-  padding:.5rem 1rem;
-
+  padding: .5rem 1rem;
+  margin-left: 4.5rem;
 }
 
 h4 {
@@ -51,4 +57,12 @@ h4 {
 
 h3 {
   margin-bottom: 0;
+}
+
+* {
+  box-sizing: inherit;
+}
+
+ul {
+  padding-left: 0;
 }
